# Thunderball

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  index.html  progress.json  reccmp-project.yml
.github/workflows/: build.yml  pegglebin.yml
cmake/: reccmp.cmake
source/: library_dx.h  library_jpeg.h  library_msvc.h  library_png.h  library_zlib.h
source/ImageLib/: ImageLib.cpp
source/ImageLib/jpeg/: jmorecfg.h
source/PakLib/: PakInterface.cpp  PakInterface.h  PakLib.vcxproj  PakLib.vcxproj.filters
source/SexyAppFramework/: BassLoader.cpp  BassLoader.h  BassMusicInterface.cpp  BassMusicInterface.h  Buffer.cpp  Buffer.h  ButtonListener.h  ButtonWidget.cpp  ButtonWidget.h  CMakeLists.txt  Checkbox.cpp  Checkbox.h  CheckboxListener.h  Color.cpp  Color.h  Common.cpp  CritSect.cpp  D3D8Helper.cpp  D3D8Helper.h  D3DInterface.cpp  D3DTester.cpp  D3DTester.h  DDImage.cpp  DDImage.h  DDInterface.cpp  DSoundInstance.cpp  DSoundManager.cpp  Debug.h  DescParser.cpp  DescParser.h  Dialog.cpp  Dialog.h  DialogButton.cpp  DialogButton.h  DirectXErrorString.cpp  EditWidget.cpp  FModMusicInterface.cpp  FModSoundManager.cpp  FModSoundManager.h  Font.cpp  (+42 more)
source/Thunderball/: .clang-format  AIBall.cpp  AIBall.h  AIMgr.cpp  AIMgr.h  AdventureScreen.cpp  AdventureScreen.h  Ball.cpp  Ball.h  BlendedImage.cpp  BlendedImage.h  Board.cpp  Board.h  Brick.cpp  Brick.h  CMakeLists.txt  CharacterDialog.cpp  CharacterDialog.h  CharacterMgr.cpp  CharacterMgr.h  CollisionMgr.cpp  CollisionMgr.h  ConfigParser.cpp  ConfigParser.h  ConstEnums.h  DataSync.cpp  DataSync.h  DebugMgr.cpp  DebugMgr.h  EffectMgr.cpp  EffectMgr.h  EndLevelDialog.cpp  EndLevelDialog.h  FloatingTextMgr.cpp  FloatingTextMgr.h  GameStats.cpp  GameStats.h  Gun.cpp  Gun.h  HelpScreen.cpp  (+81 more)
